feat: add dog allergy create
