# app/controllers/api/v1/dog_allergies_controller.rb
@@ -3,7 +3,7 @@
 module API
   module  V1
     class DogAllergiesController < ApplicationController
-      skip_before_action :authenticate_user!, only: %i[index]
+      skip_before_action :authenticate_user!, only: %i[index create]
 
       def index
         dog_allergies = Record::GetRelationship.call(
@@ -14,6 +14,15 @@ module API
         )
 
         render json: AllergenSerializer.new(dog_allergies)
+      end
+
+      def create
+        dog_allergy = DogAllergy::Create.call(
+          dog_id: params[:dog_id],
+          allergen_id: relationships.dig(:allergen, :data, :id)
+        ).result
+
+        render json: DogAllergySerializer.new(dog_allergy)
       end
     end
   end
